# project-ava

./: .gitignore  .pre-commit-config.yaml  README.md  _typos.toml  pyproject.toml
ava/: brake_master_aligner.py  fpr_mount.py  fpr_mount_on_top.py  intake_pipe_maf_mount.py  oring.py  upper_radiator_bushing.py
ava/airbox/: airbox.py
ava/common/: svg.py
ava/engine_bay_tidy/: twin_clamp.py
ava/exhaust_test_joiner/: main.py  v2.py
ava/intake/: intake_pipe_maf_mount.py  intake_support_brace.py  intake_support_brace_v2.py  intake_support_brace_v3.py  intake_support_brace_v3_stand.py  intake_support_brace_v4.py  pipe_support.py  tube_joiner.py  tube_to_panel_coupler.py
ava/misc/: cb500x_centre_stand_adapter.py  right_angle_jig.py  sliding_door_stop.py
ava/throttle_pedal/: dbw_mount.py  params.py  throttle_pedal_adapter.py  throttle_pedal_adapter_v2.py  throttle_pedal_adapter_v3.py
